# bookstore-microservices

./: .gitignore  README.md  docker-compose.yml
books/: .dockerignore  .env.example  Dockerfile  config.py  database.py  db_session.py  env.example  main.py  models.py  pyproject.toml  test_pagination.py
books/tests/: conftest.py  test_books_api.py  test_models.py
books/utils/: cloudinary_utils.py
docker/init/: 01-init.sql  02-schema.sql
monitoring/: grafana-dashboards.yml  otel-collector.yaml  prometheus.yml
monitoring/dashboards/: overview.json
monitoring/rules/: alerts.yml  app-alerts.yml
orders/: .dockerignore  .env.example  Dockerfile  Makefile  go.mod  go.sum
orders/cmd/api/: main.go
orders/integration/: orders_integration_test.go
orders/internal/clients/: books.go
orders/internal/config/: config.go
orders/internal/database/: database.go
orders/internal/handlers/: health.go  integration_mapping_test.go  metrics_test.go  orders.go  orders_handlers_test.go  orders_integration_test.go.bak  pagination_test.go
orders/internal/logging/: logger.go
orders/internal/metrics/: metrics.go
orders/internal/models/: decimal_test.go  order.go  pagination_test.go
orders/internal/repository/: orders.go  repository_test.go
orders/internal/service/: feature_test.go  mocks_test.go  orders.go  (+2 more)
scripts/: soak.sh
workers/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
workers/src/: metrics.ts  order-enqueue.ts  order-processor.ts  queue.ts  test-producer.ts  worker.ts
workers/test/: metrics.spec.ts
