[project]
name = "books"
version = "0.1.0"
description = "Books microservice for bookstore"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0"
]
